Add support for returning URLs from SelectFileDialogs.

On ChromeOS, filesystem provider-provided files should be accessed via
an externalfile URL. Further, hosted gdocs should be redirected to their
URLs. Currently, this is handled within Browser.

Add a |url| field to SelectedFileInfo to allow communicating these
values from the dialog to Browser to avoid needing to leak this into
Browser. Migrate this special-casing into the existing handling of
SelectFileDialog results on ChromeOS, populating the |url| there.

Bug: 843881
Change-Id: I9808cdbf38fb4da26b99c8a45f8bda4fd0bee9a7
Reviewed-on: https://chromium-review.googlesource.com/c/1360812
Commit-Queue: Sam McNally <sammc@chromium.org>
Reviewed-by: Luciano Pacheco <lucmult@chromium.org>
Reviewed-by: Noel Gordon <noel@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614615}
Former-commit-id: 53fe68888c1b3e844195142b6ddba163bab85cd9