chrome/browser/chromeos/fileapi/external_file_url_util.h
@@ -42,15 +42,6 @@ GURL VirtualPathToExternalFileURL(const base::FilePath& virtual_path);
 GURL CreateExternalFileURLFromPath(Profile* profile,
                                    const base::FilePath& path);
 
-// Obtains, from a file path (e.g. /special/drive-xxx/root/sample.txt), an
-// external file URL (e.g. external:drive/root/sample.txt), if the |path| points
-// an external location (drive, MTP, or FSP), or its hosted file URL if |path|
-// refers to a hosted doc (e.g. gdoc) in DriveFS. If neither condition applies,
-// |callback| is invoked with an empty GURL.
-void ResolveExternalFileUrlFromPath(Profile* profile,
-                                    const base::FilePath& path,
-                                    base::OnceCallback<void(GURL)> callback);
-
 }  // namespace chromeos
 
 #endif  // CHROME_BROWSER_CHROMEOS_FILEAPI_EXTERNAL_FILE_URL_UTIL_H_
